--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body, html{
+  height: 100%;
+  background: #222222;
+	font-family: 'Lato', sans-serif;
+}
 textarea {
     resize: none;
     overflow: hidden;
